--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       NUPKG_MAJOR: 0.999
       CODESIGN_PFX: ${{ secrets.CODESIGN_PFX }}
-    runs-on: windows-latest
+    runs-on: macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
