--- a/AppleDev/AppleDev.csproj
+++ b/AppleDev/AppleDev.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="3.6.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
