Update to use app store connect client from repo

--- a/AppleDev.Tool/AppleDev.Tool.csproj
+++ b/AppleDev.Tool/AppleDev.Tool.csproj
@@ -33,14 +33,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AppStoreConnect.Net" Version="0.1.0" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Spectre.Console.Cli" Version="0.46.0" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\AppleDev\AppleDev.csproj" />
+        <ProjectReference Include="..\AppStoreConnectClient\AppStoreConnectClient.csproj" />
     </ItemGroup>
 
     <PropertyGroup>
