--- a/AppleDev.Test/AppleDev.Test.csproj
+++ b/AppleDev.Test/AppleDev.Test.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\AppleDev\AppleDev.csproj" />
+      <ProjectReference Include="..\AppStoreConnectClient\AppStoreConnectClient.csproj" />
     </ItemGroup>
 
 </Project>
