--- a/AppleDev.Test/AppleDev.Test.csproj
+++ b/AppleDev.Test/AppleDev.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -25,6 +25,12 @@
     <ItemGroup>
       <ProjectReference Include="..\AppleDev\AppleDev.csproj" />
       <ProjectReference Include="..\AppStoreConnectClient\AppStoreConnectClient.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="testdata\MauiApp7.app\Info.plist">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
