--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,6 @@ jobs:
     name: Build
     env:
       NUPKG_MAJOR: 0.999
-      CODESIGN_PFX: ${{ secrets.CODESIGN_PFX }}
     runs-on: windows-latest
     steps:
     - name: Checkout
@@ -20,7 +19,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: |
-          7.0.x
+          8.0.x
     - name: Pack
       shell: pwsh
       run: |
@@ -34,13 +33,9 @@ jobs:
         New-Item -ItemType Directory -Force -Path .\artifacts
         dotnet pack --output ./artifacts --configuration Release -p:PackageVersion=$VERSION ./AppleDev/AppleDev.csproj
         dotnet pack --output ./artifacts --configuration Release -p:PackageVersion=$VERSION ./AppleDev.Tool/AppleDev.Tool.csproj
-
-        $pfxPath = Join-Path -Path $pwd -ChildPath "codesigncert.pfx"
-        [IO.File]::WriteAllBytes("$pfxPath", [System.Convert]::FromBase64String($env:CODESIGN_PFX))
-        dotnet nuget sign .\artifacts\*.nupkg --certificate-path $pfxPath --timestamper http://timestamp.entrust.net/TSS/RFC3161sha2TS
         
     - name: Artifacts
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v4
       with:
         name: NuGet
         path: ./artifacts
@@ -60,7 +55,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: |
-          7.0.x
+          8.0.x
     - name: Test
       run: dotnet test ./AppleDev.Test/AppleDev.Test.csproj
 
@@ -71,13 +66,13 @@ jobs:
     if: github.event_name == 'release'
     steps:
       - name: Download Artifacts
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v4.1.7
         with:
           name: NuGet
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.0.x'
+          dotnet-version: '8.0.x'
       - name: Push NuGet
         run: |
-          dotnet nuget push NuGet\*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_ORG_API_KEY }}
+          dotnet nuget push *.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_ORG_API_KEY }}
