--- a/AppStoreConnectClient/AppStoreConnectClient.csproj
+++ b/AppStoreConnectClient/AppStoreConnectClient.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -31,6 +31,10 @@
   <ItemGroup>
     <PackageReference Include="JWT" Version="10.0.2" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.6.143" PrivateAssets="all" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AppleDev\AppleDev.csproj" />
   </ItemGroup>
 
 </Project>
