Added support to list apps

--- a/AppleDev.Test/AppleDev.Test.csproj
+++ b/AppleDev.Test/AppleDev.Test.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
+        <RollForward>Major</RollForward>
     </PropertyGroup>
 
     <ItemGroup>
