--- a/AppleDev/AppleDev.csproj
+++ b/AppleDev/AppleDev.csproj
@@ -37,4 +37,8 @@
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo" _Parameter1="AppleDev.Tests" />
+  </ItemGroup>
+
 </Project>
