--- a/AppleDev/AppleDev.csproj
+++ b/AppleDev/AppleDev.csproj
@@ -38,7 +38,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo" _Parameter1="AppleDev.Tests" />
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>AppleDev.Test</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
