--- a/AppleDev.Test/AppleDev.Test.csproj
+++ b/AppleDev.Test/AppleDev.Test.csproj
@@ -29,9 +29,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="testdata\MauiApp7.app\Info.plist">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
+      <None Update="testdata\MauiApp7.app\Info.plist" CopyToOutputDirectory="PreserveNewest" />
+      <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 
 </Project>
