--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
       APP_STORE_CONNECT_PRIVATE_KEY: ${{ secrets.APP_STORE_CONNECT_PRIVATE_KEY }}
     needs: build
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -53,7 +53,7 @@ jobs:
         dotnet-version: |
           8.0.x
     - name: Test
-      run: dotnet test ./AppleDev.Test/AppleDev.Test.csproj
+      run: dotnet test ./AppleDev.Test/AppleDev.Test.csproj --logger "console;verbosity=detailed"
 
   publish:
     name: Publish
