Add MCP server to CI/CD workflow
- Add AppleDev.Mcp.Server.csproj to pack step
- Update all jobs to install .NET 9.0.x (required for MCP server)
- MCP server package will now be built, tested, and published
- Ensures MCP server NuGet package is included in releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         dotnet-version: |
           8.0.x
+          9.0.x
     - name: Pack
       shell: pwsh
       run: |
@@ -27,6 +28,7 @@ jobs:
         dotnet pack --output ./artifacts --configuration Release ./AppleDev/AppleDev.csproj
         dotnet pack --output ./artifacts --configuration Release ./AppStoreConnectClient/AppStoreConnectClient.csproj
         dotnet pack --output ./artifacts --configuration Release ./AppleDev.Tool/AppleDev.Tool.csproj
+        dotnet pack --output ./artifacts --configuration Release ./AppleDev.Mcp.Server/AppleDev.Mcp.Server.csproj
 
     - name: Artifacts
       uses: actions/upload-artifact@v4
@@ -52,6 +54,7 @@ jobs:
       with:
         dotnet-version: |
           8.0.x
+          9.0.x
     - name: Test
       run: dotnet test ./AppleDev.Test/AppleDev.Test.csproj --logger "trx;LogFileName=test-results.trx" --logger "console;verbosity=detailed" --results-directory ./TestResults
 
@@ -77,7 +80,9 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: |
+            8.0.x
+            9.0.x
       - name: Push NuGet
         run: |
           dotnet nuget push *.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_ORG_API_KEY }}
