--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
 
   publish:
     name: 🚀 Publish
-    needs: test
+    needs: build
     runs-on: macos-latest
     if: github.event_name == 'release'
     steps:
