--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
         dotnet pack --output ./artifacts --configuration Release ./AppStoreConnectClient/AppStoreConnectClient.csproj
         dotnet pack --output ./artifacts --configuration Release ./AppleDev.Tool/AppleDev.Tool.csproj
         dotnet pack --output ./artifacts --configuration Release ./AppleDev.Mcp.Server/AppleDev.Mcp.Server.csproj
+        dotnet pack --output ./artifacts --configuration Release ./AppleDev.FbIdb/AppleDev.FbIdb.csproj
 
     - name: 📤 Upload Artifacts
       uses: actions/upload-artifact@v5
@@ -52,8 +53,14 @@ jobs:
         fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
     - name: ⚙️ Setup .NET
       uses: actions/setup-dotnet@v5
+    - name: 🍺 Install IDB Companion
+      run: |
+        brew tap facebook/fb
+        brew install idb-companion
     - name: 🧪 Run Tests
-      run: dotnet test ./AppleDev.Test/AppleDev.Test.csproj --logger "trx;LogFileName=test-results.trx" --logger "console;verbosity=detailed" --results-directory ./TestResults
+      run: |
+        dotnet test ./AppleDev.Test/AppleDev.Test.csproj --logger "trx;LogFileName=test-results-appledev.trx" --logger "console;verbosity=detailed" --results-directory ./TestResults
+        dotnet test ./AppleDev.FbIdb.Test/AppleDev.FbIdb.Test.csproj --logger "trx;LogFileName=test-results-fbidb.trx" --logger "console;verbosity=detailed" --results-directory ./TestResults
 
     - name: 📊 Publish Test Results
       uses: dorny/test-reporter@v2
