Add idb simulator commands; screenshot fallback
Add a large set of simulator idb CLI commands and improve screenshot handling.

- Introduces many new AppleDev.Tool commands under Commands/Simulators (idb subcommands: accessibility, button, crashes, files, focus, key, keyboard, memory-warning, settings, swipe, tap, tests, etc.) plus clipboard simulator commands and other simulator helpers.
- IdbClient.ScreenshotAsync now handles a known .NET gRPC <-> Swift gRPC HTTP/2 PROTOCOL_ERROR by falling back to xcrun simctl for simulator screenshots (implements ScreenshotViaSimctlAsync and logs debug info).
- Update README to document the simctl fallback for ScreenshotAsync.
- Add IdbCompanionLocator.TryFindIdbCompanion helper and wire AppleDev.FbIdb into AppleDev.Tool (project reference + new IdbClientService).
- Minor test updates: prefer Runtime?.Version when selecting simulators and re-enable the screenshot integration test.

--- a/AppleDev.Tool/AppleDev.Tool.csproj
+++ b/AppleDev.Tool/AppleDev.Tool.csproj
@@ -41,6 +41,7 @@
     <ItemGroup>
         <ProjectReference Include="..\AppleDev\AppleDev.csproj" />
         <ProjectReference Include="..\AppStoreConnectClient\AppStoreConnectClient.csproj" />
+        <ProjectReference Include="..\AppleDev.FbIdb\AppleDev.FbIdb.csproj" />
     </ItemGroup>
 
 <!--    <PropertyGroup>-->
